<resources>
    <string name="app_name">sharephoto</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_name">Enter your full name</string>
    <string name="prompt_password">Choose your Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_signup">SIGN UP</string>
    <string name="action_sign_up">Sign Up with Email</string>
    <string name="action_login">Login with Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_logo">app logo</string>
    <string name="or">OR</string>
</resources>
