<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:animateLayoutChanges="true"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              >

    <ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_profile_signup"
            android:layout_marginBottom="41dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/app_logo"
            android:layout_height="wrap_content"/>


    <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:hint="@string/prompt_name"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/login_edittext_rounded_bcg"
            android:layout_marginBottom="16dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>


    <RelativeLayout
            android:id="@+id/mail_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_edittext_rounded_bcg"
    >

        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/prompt_email"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:layout_toStartOf="@+id/cancel_mail"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
        />

        <ImageView
                android:id="@+id/cancel_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_cancel" />
    </RelativeLayout>


    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/login_edittext_rounded_bcg"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="Autofill"/>


    <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:background="@color/sky_blue_color"
            android:text="@string/action_signup"
            android:textStyle="bold"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content">
        <View
                android:layout_toStartOf="@+id/or"
                android:layout_centerVertical="true"
                style="@style/Divider"/>
        <TextView
                android:layout_width="wrap_content"
                android:text="@string/or"
                android:layout_marginStart="16dp"
                android:id="@+id/or"
                android:layout_marginEnd="16dp"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        <View
                android:layout_toEndOf="@+id/or"
                android:layout_centerVertical="true"
                style="@style/Divider"/>
    </RelativeLayout>

    <Button
            android:id="@+id/login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:textSize="16sp"
            android:textColor="@color/sky_blue_color"
            android:text="@string/action_login"
            android:textStyle="bold"/>
</LinearLayout>